--- a/man/barps.1
+++ b/man/barps.1
@@ -1,4 +1,4 @@
-.TH barps 1 1-July-2001 "LIF Utilities" "LIF Utilities"
+.TH barps 1 13-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
 barps \- Print an HP41 barcode file on a postscript printer
 .SH SYNOPSIS
@@ -31,7 +31,7 @@ The Postscript language is described in
 .SH EXAMPLES
 If
 .I data1
-is an sdata file, and 
+is an raw sdata file, and 
 .I postscript
 is a postscript printer
 then
