--- a/man/er41rom.1
+++ b/man/er41rom.1
@@ -1,4 +1,4 @@
-.TH er41rom 1 29-Dec-2001 "LIF Utilities" "LIF Utilities"
+.TH er41rom 1 13-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
 er41rom \- a filter to unscramble an Eramco ROM image
 .SH SYNOPSIS
@@ -21,7 +21,7 @@ process with other programs.
 If 
 .I myrom.xm41
 is an HP41 rom image, produced by the Eramco MLDL-OS and stored in a 
-linux file, then
+file, then
 .PP
 .B er41rom < myrom.xm41 > myrom.rom
 .PP 
