--- a/man/lifheader.1
+++ b/man/lifheader.1
@@ -1,4 +1,4 @@
-.TH lifheader 1 29-January-2016 "LIF Utilitites" "LIF Utilities"
+.TH lifheader 1 14-April-2018 "LIF Utilitites" "LIF Utilities"
 .SH NAME
 lifheader \- show the LIF file header information of a LIF file
 .SH SYNOPSIS
@@ -21,7 +21,7 @@ with further details (particularly HP41 and HP75 file types) in the
 .SH EXAMPLES
 If
 .I zline.p41
-is a lif file containing an HP41 program then
+is a lif file containing a HP41 program then
 .PP
 .B lifheader zline.p41
 .PP 
