--- a/man/lifmod.1
+++ b/man/lifmod.1
@@ -1,4 +1,4 @@
-.TH lifmod 1 21-April-2015 "LIF Utilities" "LIF Utilities"
+.TH lifmod 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
 lifmod \- reads contents and info of HP-41 module files
 .SH SYNOPSIS
@@ -51,7 +51,7 @@ is a module file of the HP-41 Advantage Pac then
 .B lifmod -e ADVANTAGE.MOD
 .PP
 will print detailed information of the content of the module and
-extract the three rom images of the module to correspoding .rom files.
+extract the three rom images of the module to corresponding .rom files.
 .SH REFERENCES
 Some information can be found in the comments of the modfile.c source file
 (see below).
@@ -60,4 +60,4 @@ Unknown
 .SH AUTHOR
 .B lifmod
 was nearly entirely created with the help of the modfile.c subroutines 
-written by Warren Furlow, warren@furlow.org als public domain software.
+written by Warren Furlow, warren@furlow.org as public domain software.
