--- a/man/lifversion.1
+++ b/man/lifversion.1
@@ -4,7 +4,7 @@ lifversion \- display the version of the LIF Utilities
 .SH SYNOPSIS
 .B lifversion
 .SH DESCRIPTION
-.B raw41lif
+.B lifversion
 writes the version number of the LIF Utilities to standard output.
 .B lifversion
 was written by Joachim Siebold, bug400@gmx.de and has been placed 
