--- a/man/rom41cat.1
+++ b/man/rom41cat.1
@@ -1,4 +1,4 @@
-.TH rom41cat 1 29-Dec-2001 "LIF Utilities" "LIF Utilities"
+.TH rom41cat 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
 rom41cat \- a filter to display the function names in an HP41 ROM image
 .SH SYNOPSIS
@@ -70,7 +70,7 @@ containing the function names in
 .SH SEE ALSO
 .B rom41(1)
 .SH BUGS
-Some commonly used HP41 characters have no Ascii equivalents and are 
+Some commonly used HP41 characters have no ASCII equivalents and are 
 therefore displayed as \\nnn octal escape sequences. Spaces in function 
 names are replaced by underscores since 
 .B prog41
