--- a/man/rom41lif.1
+++ b/man/rom41lif.1
@@ -1,6 +1,6 @@
-.TH rom41lif 1 24-March-2014 "LIF Utilitites" "LIF Utilities"
+.TH rom41lif 1 14-April-2018 "LIF Utilitites" "LIF Utilities"
 .SH NAME
-rom41lif \- a filter to convert a HP-41 rom file to a data file that can be used to update the HP-41 CL 
+rom41lif \- a filter to convert a HP-41 rom file to a LIF file of type sdata that can be used to update the HP-41 CL 
 .SH SYNOPSIS
 .B rom41lif
 .I <LIF filename>
@@ -11,7 +11,7 @@ rom41lif \- a filter to convert a HP-41 rom file to a data file that can be used
 .PP
 .SH DESCRIPTION
 .B rom41lif
-is a filter which generates a  LIF data file from an HP41 rom file.
+is a filter which generates a LIF sdata file from an HP41 rom file.
 The filter reads the rom data from standard input and writes the LIF 
 file header and the uncompressed rom data to standard output. 
 Note: this filter updates incorrect ROM checksums.
@@ -21,12 +21,12 @@ If
 .I HPILDv1B.ROM 
 is the rom file of the HP-IL development module then
 .PP
-.B cat HPILDv1B.ROM | rom41lif HPILDEV \> hpildev.sda
-.PP 
-will generate a LIF file 
-.I hpildvev.sda
-with the LIF filename
+.B cat HPILDv1B.ROM | rom41lif HPILDEV | lifput lifimage.img
+.PP
+will put the sdata rom file with the name
 .I HPILDEV
+into the LIF image file
+.I lifimage.img
 .SH AUTHOR
 .B rom41lif
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
