--- a/man/wcat41.1
+++ b/man/wcat41.1
@@ -1,6 +1,6 @@
-.TH wcat41 1 23-December-2000 "LIF Utilities" "LIF Utilities"
+.TH wcat41 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
-wcat41 \- a filter to list the contents of an HP41 Write All file
+wcat41 \- a filter to list the contents of a raw HP41 Write All file
 .SH SYNOPSIS
 .B wcat41 <
 .I wall_file
@@ -26,7 +26,7 @@ in the logical order. The data stored in HP41 User Memory is documented
 in most books on synthetic programming, for example the  Synthetic 
 Programming Quick Reference Guide by J. Smith.
 .SH EXAMPLES
-To get a catalogue of an HP41 Write All file called 
+To get a catalogue of a raw HP41 Write All file called 
 .I all1.w41 ,
 type : 
 .B wcat41 < all1.w41
