--- a/man/hx41rom.1
+++ b/man/hx41rom.1
@@ -1,6 +1,6 @@
-.TH hx41rom 1  29-January-2016 "LIF Utilitites" "LIF Utilities"
+.TH hx41rom 1  13-April-2018 "LIF Utilitites" "LIF Utilities"
 .SH NAME
-hx41rom \- a filter to convert a SDATA file which contains a packed ROM image written by the HEPAX WRTROM command to an unpacked HP-41 ROM file.
+hx41rom \- a filter to convert a SDATA file which contains a scrambled (packed) ROM image written by the HEPAX WRTROM command to an unscrambled (unpacked) HP-41 ROM file.
 .SH SYNOPSIS
 .B hx41rom
 .B <
@@ -11,17 +11,22 @@ hx41rom \- a filter to convert a SDATA file which contains a packed ROM image wr
 .B hx41rom \-?
 .SH DESCRIPTION
 .B hx41rom
-is a filter which generates an unpacked HP-41 ROM file from an SDATA file that
-contains a packed ROM image created by the HEPAX WRTROM command.
-The filter reads the SDATA file (without header!)  from standard input and writes 
-the unpacked HP-71 ROM image to standard output.
+The HEPAX ROM can save HP-41 ROM images to a HP-IL mass storage. It creates
+a SDATA file which contains 4 consecutive HP-41 10 bit ROM word in 5 bytes
+of the file. A 4K ROM dump is thus stored in a 5120 byte file.
+.PP
+.B hx41rom
+unscrambles such an raw SDATA file, storing each HP-41 10 bit word in 2 bytes of
+the output file, and therefore a 4K image takes up 8192 bytes when
+unscrambled. The resulting output file, although larger, is easier to
+process with other programs.
 .SH EXAMPLES
 If
-.I myrom.dat 
+.I myrom.hx
 is an SDATA file with the LIF header removed that contains the packed 
 ROM image then
 .PP
-.B cat myrom.dat | hx41rom > myrom.rom
+.B cat myrom.hx | hx41rom > myrom.rom
 .PP 
 will generate a file
 .I myrom.rom
