--- a/man/lifimage.1
+++ b/man/lifimage.1
@@ -1,6 +1,6 @@
-.TH lifimage 1 11-June-2000 "LIF Utilities" "LIF Utilities"
+.TH lifimage 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
-lifimage \- make an image of an HP LIF disk
+lifimage \- make an LIF image file of a HP LIF floppy disk
 .SH SYNOPSIS
 .B lifimage
 .I <input device> <output file>
@@ -11,7 +11,7 @@ lifimage \- make an image of an HP LIF disk
 (Writes output to standard output)
 .SH DESCRIPTION
 .B lifimage
-reads an HP LIF format 3.5 inch floppy disk and produces an image file. 
+reads an HP LIF format 3.5 inch floppy disk and produces an LIF image file. 
 This file can be processed by other 
 .I LIF utilities
 or written back to a physical disk using
@@ -19,22 +19,26 @@ or written back to a physical disk using
 If 
 .B lifimage
 is executed with 2 arguments, then the second argument is used as the 
-filename of the image file. If it is executed with one argument then the 
+filename of the LIF image file. If it is executed with one argument then the 
 file is written to standard output.
 .PP
 See comments in the source code for details of the image file format.
+.PP
+.B
+Note:
+you need read
+.B
+and
+write access to the floppy disk drive. Thus shelter your data with the write protect switch.
 .SH EXAMPLES
 If device
 .I /dev/fd1
 contains an HP LIF disk then
 .PP
-.B lifimage /dev/fd1 disk1.lif
+.B lifimage /dev/fd1 disk1.img
 .PP
 will make an image of that disk in the file 
-.I disk1.lif
-.SH BUGS
-No attempt has been made to handle bad track replacements. The first 77 
-cylinders only of the disk are read.
+.I disk1.img
 .SH AUTHOR
 .B lifimage
 was written by Tony Duell, ard@p850ug1.demon.co.uk and has been placed 
