--- a/man/liftext.1
+++ b/man/liftext.1
@@ -1,6 +1,6 @@
-.TH liftext 1 11-June-2000 "LIF Utilities" "LIF Utilities"
+.TH liftext 1 14-April-2018 "LIF Utilities" "LIF Utilities"
 .SH NAME
-liftext \- a filter to translate an HP text file into a standard text file
+liftext \- a filter to translate an HP LIF text file into an ASCII text file
 .SH SYNOPSIS
 .B liftext <
 .I Input file
@@ -8,22 +8,29 @@ liftext \- a filter to translate an HP text file into a standard text file
 .I Output file
 .SH DESCRIPTION
 .B liftext
-is a filter that reads an HP text file (also known as a LIF1 format file) 
+is a filter that reads an HP LIF text file (also known as a LIF1 format file) 
 from standard input and writes the equivalent standard text file to 
 standard output. Each record of the HP text file is assumed to be one 
 line of the output file. This file type is used on the HP-71 (TEXT) and
 the extended memory or HEPAX file system of the HP-41 (ASCII).
+.PP
+.B
+Note:
+.I
+liftext
+does not perform any character set conversions.
+
 .SH REFERENCES
 The HP text file format is documented in section 11.2.8.1 of the 
-.I HP71 Software Internal Design Specifications Volume 1 (Hewlett\-Packard)
+.I HP-71 Software Internal Design Specifications Volume 1 (Hewlett\-Packard)
 .SH EXAMPLES
 If 
-.I disk1.lif
+.I disk1.img
 is a LIF disk image containing an HP text file called 
 .I TEXTA 
 then
 .PP
-.B lifget -r disk1.lif TEXTA | liftext
+.B lifget -r disk1.img TEXTA | liftext
 .PP 
 will produce a listing of this file to standard output.
 .SH AUTHOR
