--- a/man/rom41er.1
+++ b/man/rom41er.1
@@ -1,6 +1,6 @@
-.TH rom41er 1 9-Nov-2017 "LIF Utilitites" "LIF Utilities"
+.TH rom41er 1 14-April-2018 "LIF Utilitites" "LIF Utilities"
 .SH NAME
-rom41er \- a filter to convert a HP-41 rom file to a data file that can be used by the Eramco MLDL-OS
+rom41er \- a filter to convert an unscrambled HP-41 rom file to a LIF file that can be used by the Eramco MLDL-OS
 .SH SYNOPSIS
 .B rom41er
 .I <LIF filename>
@@ -11,7 +11,7 @@ rom41er \- a filter to convert a HP-41 rom file to a data file that can be used 
 .PP
 .B rom41er \-?
 .SH DESCRIPTION
-The Eramco MLDL-OS ROM set can save HP41 ROM images to disk, and the
+The Eramco MLDL-OS ROM set can load HP41 ROM images from disk, and the
 file format used has become a de facto standard for such images. It stores 4
 10 bit HP41 words in 5 bytes of the file. A 4K ROM dump is thus stored in
 a 5120 byte file.
@@ -19,19 +19,19 @@ a 5120 byte file.
 .B rom41er
 is a filter which generates a  LIF file of type X-M41 (E070).
 The filter reads the rom data from standard input and writes the LIF 
-file header and the rom data in scrambled Eramoc MLDL-OS format
- to standard output. Note: This filter adjusts an incorrect ROM checksum.
+file header and the rom data in scrambled Eramco MLDL-OS format
+to standard output. Note: This filter adjusts an incorrect ROM checksum.
 .SH EXAMPLES
 If
 .I HPILDv1B.ROM 
 is the rom file of the HP-IL development module then
 .PP
-.B cat HPILDv1B.ROM | rom41er HPILDEV \> hpildev.xm41
+.B cat HPILDv1B.ROM | rom41er HPILDEV | lifput lifimage.img
 .PP 
-will generate a LIF file 
-.I hpildvev.xm41
-with the LIF filename
+will put the scrambled rom file with the name
 .I HPILDEV
+into the LIF image file
+.I lifimage.img
 .SH AUTHOR
 .B rom41er
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
