--- a/man/rom41hx.1
+++ b/man/rom41hx.1
@@ -1,6 +1,6 @@
-.TH rom41hx 1 24-March-2014 "LIF Utilitites" "LIF Utilities"
+.TH rom41hx 1 14-April-2018 "LIF Utilitites" "LIF Utilities"
 .SH NAME
-rom41hx \- a filter to convert a HP-41 rom file to a data file that can be uploaded to HEPAX RAM with the READROM command
+rom41hx \- a filter to convert a HP-41 rom file to a LIF file of type sdata that can be uploaded to HEPAX RAM with the READROM command
 .SH SYNOPSIS
 .B rom41hx
 .I <LIF filename>
@@ -11,22 +11,30 @@ rom41hx \- a filter to convert a HP-41 rom file to a data file that can be uploa
 .PP
 .B rom41hx \-?
 .SH DESCRIPTION
+The HEPAX ROM set can load HP41 ROM images from disk. The file format is
+a file of type
+.I SDATA
+which stores 4 10 bit HP41 words in 5 bytes of the file. A 4K ROM dump is thus stored in a 5120 byte file.
+.PP
 .B rom41hx
-is a filter which generates a  LIF data file from a HP41 rom file.
+is a filter which generates a  LIF data file of type 
+.I SDATA
+from a HP41 rom file.
+.PP
 The filter reads the rom data from standard input and writes the LIF 
-file header and the rom data in scrambled hepax format 
- to standard output. Note: this filter adjusts an incorrect ROM checksum.
+file header and the rom data in scrambled HEPAX format 
+to standard output. Note: this filter adjusts an incorrect ROM checksum.
 .SH EXAMPLES
 If
 .I HPILDv1B.ROM 
 is the rom file of the HP-IL development module then
 .PP
-.B cat HPILDv1B.ROM | rom41hx HPILDEV \> hpildev.sda
+.B cat HPILDv1B.ROM | rom41hx HPILDEV | lifput lifimage.img
 .PP 
-will generate a LIF file 
-.I hpildvev.sda
-with the LIF filename
+will put the scrambled rom file with the name
 .I HPILDEV
+into the LIF image file
+.I lifimage.img
 .SH AUTHOR
 .B rom41hx
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
